@@ -49,6 +49,8 @@
        the search. (Stefan)
 - NEW: TortoiseMerge can hide unchanged sections when showing
        the diff or merge. (Stefan)
+- NEW: Double clicking on a word in TortoiseMerge marks all
+       occurrences of that word in all views. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
